Archive2/93/f94f7d9625b579/output
main.cpp:8:15: error: default initialization of an object of const type 'const Foo' requires a user-provided default constructor
    const Foo foo;
              ^
1 error generated.
